<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:orientation="vertical"
    tools:context="groupn.tcss450.uw.edu.myuilabtake3.CheckBoxRadioButtonFragment">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioYes" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioNo" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textAlignment="viewStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <CheckBox
            android:id="@+id/checkboxCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingCheese" />

        <CheckBox
            android:id="@+id/checkboxMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingMeat" />

        <CheckBox
            android:id="@+id/checkboxSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingSauce" />

        <CheckBox
            android:id="@+id/checkboxVeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingVegitables" />

    </LinearLayout>

</RelativeLayout>
